manifests-map/7.nginx-apigw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-apigw
  namespace: nginx-apigw
  labels:
    app: nginx-apigw
spec:
  selector:
    matchLabels:
      app: nginx-apigw
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-apigw
    spec:
      containers:
      - name: nginx-apigw
        image: YOUR_PRIVATE_REGISTRY/nginxplus-js-lua:TAG
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: frontend-conf
          mountPath: /etc/nginx/conf.d/frontend.conf
          subPath: frontend.conf
        - name: openid-connect-js
          mountPath: /etc/nginx/conf.d/openid_connect.js
          subPath: openid_connect.js
        - name: openid-connect-server-conf
          mountPath: /etc/nginx/conf.d/openid_connect.server_conf
          subPath: openid_connect.server_conf
        - name: openid-connect-configuration-conf
          mountPath: /etc/nginx/conf.d/openid_connect_configuration.conf
          subPath: openid_connect_configuration.conf
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: frontend-conf
        configMap:
          name: frontend-conf
      - name: openid-connect-js
        configMap:
          name: openid-connect-js
      - name: openid-connect-server-conf
        configMap:
          name: openid-connect-server-conf
      - name: openid-connect-configuration-conf
        configMap:
          name: openid-connect-configuration-conf

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-apigw
  namespace: nginx-apigw
  labels:
    app: nginx-apigw
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx-apigw
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-apigw-nodeport
  namespace: nginx-apigw
  labels:
    app: nginx-apigw
spec:
  ports:
  - name: http
    port: 80
    nodePort: 30180
  selector:
    app: nginx-apigw
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-apigw
  namespace: nginx-apigw
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"
    nginx.org/client-max-body-size: "4m"
    nginx.com/health-checks: "true"
  labels:
    app: nginx-apigw
spec:
  rules:
    - host: api.ff.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-apigw
                port:
                  number: 80
